web-app/src/css/global.css
/* Import fonts*/
@import url("./fonts/Montserrat/Montserrat.css");
:root {
	--green: #00c892;
	--orange: #9d5066;
	--lime: #ccff00;
	--orange-2: #e4582e;
	--blue: #0067d2;
	--dark-grey: #19192c;
	--bg-wall: #858383;
	--scroll-width: 16px;
	--bg-scroll: var(--dark-grey);
	--bg-dark: #0c0c1d; /* Dark - background */
	--bg-menu: var(--dark-grey); /* Background Sidemenu */
	--table-taken: var(--orange); /* Маса - заета */
	--table-free: var(--green); /* Маса - свободна */
	--bg-btn: rgba(255, 255, 255, 0.2); /* Background button */
	--bg-btn-active: rgba(
		0,
		103,
		210,
		0.2
	); /* Background for active (selected) button */
	--border-btn-active: var(--blue); /* Border color for active button */
	--color-sidemenu: #ffffff; /* Sidemenu text */

	/* Table controls & payBill */
	--border-btn-categories: var(--blue);
	--border-btn-bill-active: var(--orange-2);
	--color-btn-bill-active: var(--orange-2);
	--bg-btn-categories: rgba(0, 103, 210, 0.05);
	--bg-btn-categories-active: rgba(228, 88, 46, 0.05);
	--border-btn-xQty: var(--green);
	--bg-btn-xQty: rgba(0, 200, 146, 0.05);
	--bg-btn-bills: rgba(255, 255, 255, 0.05);
	--border-btn-bills: #000000;
	--color-btn-bills: #000000;
	--border-table: #19192c;
	--bg-totals: rgba(255, 255, 255, 0.06);
}

* {
	box-sizing: border-box;
}

body {
	padding: 0px;
	margin: 0px;
	/* width: 100vw; */
	width: 100%;
	height: 100vh;
	font-family: "Montserrat", sans-serif;
	font-weight: 400;
	background-color: var(--bg-dark);
	color: white;
}

/* SCREENSAVER */
#screensaver h1 {
	/* center text vertically */
	position: absolute;
	top: 50%;
	left: 50%;
	font-weight: 600;
	font-size: 10rem;
	transform: translate(-50%, -50%);
	font-weight: 600;
	font-size: 10rem;
	/* text change colors loop */
	animation: screensaver-text-change 15s ease infinite;
	animation-direction: alternate;
}

.d-table-footer-group {
	display: table-footer-group;
}

#blackscreen {
	z-index: 9999999;
	border: none;
	background-color: rgba(0, 0, 0, 0.9);
	display: none;
	width: 100%;
	height: 100%;
	position: absolute;
}

#screensaver {
	pointer-events: all;
	border: none;
	z-index: 999999;
	display: none;
	color: black;
	text-align: center;
	text-transform: uppercase;
	width: 100%;
	height: 100%;
	position: absolute;
	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
	background-size: 400% 400%;
	animation: screensaver-gradient 15s ease infinite;
}

@keyframes screensaver-gradient {
	0% {
		background-position: 0% 50%;
	}
	50% {
		background-position: 100% 50%;
	}
	100% {
		background-position: 0% 50%;
	}
}

@keyframes screensaver-text-change {
	/* #ee7752, #e73c7e, #23a6d5, #23d5ab */
	0% {
		color: #23d5ab;
	}
	33.33% {
		color: #23a6d5;
	}
	66.66% {
		color: #e73c7e;
	}
	100% {
		color: #ee7752;
	}
}

/* CUSTOM SCROLL */
/* Firefox */
* {
	scrollbar-width: auto;
	/* scrollbar-color: #0067d2 rgba(255, 255, 255, 0.1); */
	scrollbar-color: #0067d2 var(--bg-scroll);
}

/* Chrome, Edge, and Safari */
*::-webkit-scrollbar {
	width: var(--scroll-width);
}

*::-webkit-scrollbar-track {
	/* background: rgba(255, 255, 255, 0.1); */
	background: var(--bg-scroll);
}

*::-webkit-scrollbar-thumb {
	background-color: #0067d2;
	border-radius: 0px;
	border: 0px;
}

/* PIN CODE NUMPAD */
#numpad-wrapper {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
	width: 50vw;
	margin: auto;
}

#numpad-wrapper #code {
	display: flex;
	justify-content: center;
}

#numpad-wrapper #code {
	font-size: 5rem;
}

#numpad-wrapper #numpad {
	display: grid;
	gap: 1rem;
	grid-template-columns: 1fr 1fr 1fr;
}

#numpad-wrapper #numpad button {
	font-size: 3rem;
}

#numpad-wrapper #numpad button:last-of-type {
	grid-column: 2/3;
}

.wrong-pin {
	color: red !important;
}

.cursor-pointer {
	cursor: pointer;
}

